<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/through_search"
            android:title="@string/search_title"
            android:icon="@drawable/ic_search"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_dictionary"
          android:icon="@drawable/ic_view_list"
          android:title="@string/show_dict"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_edit"
          android:icon="@drawable/ic_edit_white_24dp"
          android:title="@string/action_edit"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/open_settings"
            android:orderInCategory="100" android:title="@string/title_activity_settings"
            app:showAsAction="never" />
</menu>
