<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:showIn="@layout/app_bar_main" android:gravity="top|center"
              android:orientation="vertical"
              tools:context=".Activities.MainActivity" android:paddingTop="50dp">

    <LinearLayout android:id="@+id/whirl_options" android:visibility="gone"
            android:gravity="top|center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView android:id="@+id/group_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:textStyle="bold"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:height="15dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <CheckBox android:id="@+id/loop_whirl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whirl_loop"/>

            <CheckBox android:id="@+id/rnd_whirl"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/whirl_randomize"/>

            <CheckBox android:id="@+id/flip_rnd_whirl"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/whirl_flip_rnd"/>

            <CheckBox android:id="@+id/flip_all_whirl"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/whirl_flip_all"/>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <CheckBox android:id="@+id/wrap_only_last_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/only_last_n_words"/>

                <EditText android:id="@+id/last_n_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:minWidth="50dp"
                        android:inputType="number"
                />
            </LinearLayout>

        </LinearLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:height="15dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:orientation="horizontal">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_whirl"
                    android:text="@string/start_whirl_single"
            />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_whirl_global"
                    android:text="@string/start_whirl_global"
                    />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/no_whirl" android:visibility="visible"
                  android:gravity="top|center"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView android:padding="30dp" android:id="@+id/whirl_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/whirl_no_whirl"
        />

        <ImageView android:id="@+id/whirl_group_add"
            android:src="@drawable/add_light_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
        />

    </LinearLayout>

</LinearLayout>